--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,7 @@ gunicorn
 joblib
 pandas
 numpy
-sklearn.preprocessing
-sklearn.model_selection
-imblearn.over_sampling
-sklearn.ensemble
+sklearn
+imblearn
 seaborn
-matplotlib.pyplot
-sklearn.metrics
+matplotlib
