--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
-Flask
-gunicorn
-joblib
-pandas
-numpy
+Flask==2.2.5
+gunicorn==23.0.0
+joblib==1.1.1
+pandas==1.3.5
+numpy==1.21.6
 scikit-learn==1.0.2
-imblearn
-seaborn
-matplotlib
+imblearn==0.0
+seaborn==0.11.2
+matplotlib==3.5.3
+setuptools>=58
+wheel
