--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
 Flask==2.2.5
 gunicorn==23.0.0
-joblib==1.1.1
-pandas==1.3.5
-numpy==2.2.6
-scikit-learn==1.0.2
-imblearn==0.0
-seaborn==0.11.2
-matplotlib==3.5.3
+joblib==1.3.2
+pandas==2.2.2
+numpy==2.2.1
+scikit-learn==1.5.1
+imbalanced-learn==0.12.3
+seaborn==0.13.2
+matplotlib==3.9.2
 setuptools>=58
 wheel
